# ai

./: README.md  pyproject.toml
.github/workflows/: ci.yml
current/: state.md  task-contract.md  transformation-contract.md
ontology/: LIFECYCLE.md  METAMODEL.md  RELATIONS.md  REVIEW.md  SCHEMA.md  azione.md  decisione.md  evidenza.md  obiettivo.md  osservazione.md  rischio.md  stato.md  transizione.md  trigger.md  vincolo.md
reviews/: ontology-review.md
specification/: lifecycle.md  metamodello.md  relazioni.md  schema.md
src/trading_system/: __init__.py  data.py
tests/: first-behavior-case.md  test_data.py
trading/: README.md
trading/cases/: first-request.md
trading/current/: state.md  task-contract.md  transformation-contract.md
trading/tests/: first-data-case.md
