[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-system"
version = "0.1.0"
description = "Trading system developed through explicit, verifiable transformations."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "black==26.3.1",
  "mypy==1.19.1",
  "pytest==9.0.2",
  "ruff==0.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trading_system"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["trading_system"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
