[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "trading-system"
version = "0.1.0"
description = "Trading system developed through explicit, verifiable transformations."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "black==26.5.1",
  "mypy==2.3.0",
  "pytest==9.1.1",
  "ruff==0.15.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trading_system"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["trading_system"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
